test_regress/t/t_type_param_circ_bad.out
%Error: t/t_type_param_circ_bad.v:15:20: Recursive type definition
                                       : ... note: In instance 't'
        t/t_type_param_circ_bad.v:15:20: ... Type chain: PARAMTYPEDTYPE 'SZ'
   15 |     parameter type SZ = SZ
      |                    ^~
        t/t_type_param_circ_bad.v:15:25: ... Type chain: REFDTYPE 'SZ'
   15 |     parameter type SZ = SZ
      |                         ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
